--- a/santa/index.pug
+++ b/santa/index.pug
@@ -14,6 +14,14 @@ html(lang="en")
         link(rel="preconnect" href="https://fonts.googleapis.com")
         link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Mali:wght@700&display=swap" rel="stylesheet")
+        
+        // Google tag (gtag.js)
+        script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-J76SQ67RJB')
+        script.
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-J76SQ67RJB');
 
         link(href="../assets/manrope/index.css", rel="stylesheet")
         link(href="./index.sass", rel="stylesheet")
