--- a/gifts/main.pug
+++ b/gifts/main.pug
@@ -35,7 +35,7 @@
         .gift-card.token-card
             .backside
                 p TAP to open
-            .frontside 
+            a.frontside(target="_blank" rel="noopener noreferrer")
                 p.tokens 3
                 p.tokens-label NEAR
                 p.description Assets have been transferred to your account
@@ -43,7 +43,7 @@
         .gift-card.apy-card
             .backside
                 p TAP to open
-            .frontside 
+            a.frontside(target="_blank" rel="noopener noreferrer")
                 p.apy +0.17
                 p.apy-name APY
                 p.description Rare prize. Bonus APY for a year. APY in your profile will be updated in couple days.
@@ -51,7 +51,7 @@
         .gift-card.nft-card
             .backside
                 p TAP to open
-            .frontside 
+            a.frontside(target="_blank" rel="noopener noreferrer")
                 img.nft
                 p.description Sign in here to learn more about NFT bonuses.
 
