--- a/gifts/styles.sass
+++ b/gifts/styles.sass
@@ -40,7 +40,7 @@ body
     padding-bottom: 32px
     min-height: 100vh
     width: 100%
-    max-width: 720px
+    max-width: 800px
     padding-left: 10%
     display: flex
     justify-content: center
@@ -290,6 +290,7 @@ body
     .frontside
         background: #212121
         transform: rotateY(180deg)
+        text-decoration: none
 
     &.open .frontside
         transform: rotateY(0deg)
