--- a/santa/main.pug
+++ b/santa/main.pug
@@ -4,6 +4,8 @@
         br
         | a Christmas miracle
 
+    a.button(href="/gifts") Pick up a gift
+
     .statistics
         .statistics-item
             p.statistics-item-header TOTAL Tokens
@@ -18,20 +20,15 @@
     .info-list 
         .info-list-item 
             .info-list-item-number 1
-            p Send Santa Token through wallets in NEAR or by phone number to anyone.
+            p Send Santa Token through wallets in NEAR or by phone number to anyone. Gift more than 50 STT to a new user to get cashback
 
         .info-list-item 
             .info-list-item-number 2
-            p In the new year, tokens will turn into USDC, NEAR, and NFT by decentralized randomization.
+            p In the new year, tokens will turn into USDC, NEAR, and NFT by decentralized randomization
 
         .info-list-item 
             .info-list-item-number 3
-            p 
-                | Gift more than 50 STT 
-                br
-                | to a new user to get 
-                br
-                | 75 STT back.
+            p Before the results are tallied, the HERE team reserves the right to block an account if fraud or tampering with SANTA is suspected
 
     .gift-now 
         h2 100 STT ~ 1$
