--- a/gifts/main.pug
+++ b/gifts/main.pug
@@ -21,14 +21,12 @@
         div
     
 .no-gifts.none
-    h1 
-        | We haven’t found 
-        br
-        | santa tokens in
-        br
-        | your account
-    a.learn-more(href="https://herewallet.app") Learn more about contest
-    a.support-link Experience problems? Contact support
+    h1 Your account has been blocked
+    p Before the results are tallied, the HERE team reserves the right to block an account if fraud or tampering with SANTA is suspected
+    
+    div(style="display: flex; gap: 18px; margin-top: 48px; flex-wrap: wrap; justify-content: center")
+        a.learn-more(href="https://herewallet.app/santa") Learn more about contest
+        button.connect-wallet.logout-button Logout
 
 .gifts-screen.none
     .cards
