--- a/santa/index.sass
+++ b/santa/index.sass
@@ -14,6 +14,25 @@ body
 .none
     display: none
 
+.button
+    margin-top: 64px
+    text-decoration: none
+    background: #FFFFFF
+    height: 56px
+    border-radius: 24px
+    padding: 0 88px
+    font-family: 'Manrope'
+    font-style: normal
+    font-weight: 700
+    font-size: 16px
+    line-height: 22px
+    text-align: center
+    font-feature-settings: 'liga' off, 'calt' off
+    color: #2C3034
+    display: flex
+    align-items: center
+    justify-content: center
+
 body::before
     display: block
     content: ""
