gifts error detail

--- a/gifts/main.pug
+++ b/gifts/main.pug
@@ -21,8 +21,8 @@
         div
     
 .no-gifts.none
-    h1 Your account has been blocked
-    p Before the results are tallied, the HERE team reserves the right to block an account if fraud or tampering with SANTA is suspected
+    h1 You don't have a gift
+    p.error-detail
     
     div(style="display: flex; gap: 18px; margin-top: 48px; flex-wrap: wrap; justify-content: center")
         a.learn-more(href="https://herewallet.app/santa") Learn more about contest
