--- a/landing/index.pug
+++ b/landing/index.pug
@@ -29,7 +29,7 @@ html(lang="en")
 
         include section-main/index.pug
 
-        .page 
+        .page.margin-minus
             .page-background
             include section-features/index.pug
             include section-news/index.pug
