--- a/landing/common/base.sass
+++ b/landing/common/base.sass
@@ -1,7 +1,7 @@
 body
 	padding: 0
 	margin: 0
-	background: #2c3034
+	background-color: #2c3034
 	font-family: "Manrope", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif
 	overflow-x: hidden
 
